banner section alignment fixed

--- a/src/Components/HomeComp/HomeBanner/HomeBanner.css
+++ b/src/Components/HomeComp/HomeBanner/HomeBanner.css
@@ -97,9 +97,9 @@
 }
 
 .homebannerFlexLeftHead h1 {
-    font-size: 45px;
+    font-size: 50px;
     font-weight: 900;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     font-family: var(--primaryFont);
 }
 
@@ -107,8 +107,8 @@
     width: 70%;
     font-size: 17px;
     font-weight: 500;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 35px;
+    margin-bottom: 35px;
     text-align: start;
 }
 
@@ -140,7 +140,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px 30px;
+    padding: 25px 30px;
     padding-left: 0px;
     text-align: start;
 }
